backend/ok.log
file:///C:/Users/yashd/Documents/GitHub/Coding_platform/backend/routes/blogs.js:3
import { authenticateToken } from '../middleware/auth.js'; // Assuming this middleware exists
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../middleware/auth.js' does not provide an export named 'authenticateToken'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.1
